Added html5 shiv; added ie style;

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    
+    <!--[if IE]>
+    <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" media="screen, projection" />
+    <script type="text/javascript" src="js/html5.js"></script>
+    <![endif]-->
+
   </head>
   <body>
     <header>
@@ -12,7 +18,7 @@
     </header>
     <div class="page">
       <div class="coming-soon">
-        Coming Soon
+        Coming Soon&hellip;
       </div>
     </div>
     <footer>
