added title image;

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 
   </head>
   <body>
-    <header>
-      <div class="title"><a href="http://prajwalit.com" title="Prajwalit.com">Prajwalit.com</a></div>
-    </header>
-    <div class="page">
-      <div class="coming-soon">
-        Coming Soon&hellip;
+    <div class="container">
+      <header>
+        <div class="title"><a href="http://prajwalit.com"
+        title="Prajwalit.com"><img src="images/title.png" alt="prajwalit" /></a></div>
+      </header>
+      <div class="page">
+        <div class="coming-soon">Coming soon&hellip;</div>
       </div>
+      <footer>
+        <div class="footnote">Copyright © 2010 Prajwalit.com &#149; All rights reserved</div>
+      </footer>
     </div>
-    <footer>
-      <div class="footnote">Copyright © 2010 Prajwalit.com &#149; All rights reserved</div>
-    </footer>
   </body>
 </html>
