Added description n pics.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Prajwalit.com</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link href="stylesheets/screen.css?v=201009041500" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/screen.css?v=201009042000" media="screen, projection" rel="stylesheet" type="text/css" />
     
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" media="screen, projection" />
@@ -15,11 +15,49 @@
   <body>
     <div class="container">
       <header>
-        <div class="title"><a href="http://prajwalit.com"
-        title="Prajwalit.com"><img src="images/title.png" alt="prajwalit" /></a></div>
+        <h1>
+          <a href="http://prajwalit.com" title="Prajwalit.com">
+            <img src="images/logo.png" alt="prajwalit" />
+          </a>
+        </h1>
       </header>
       <div class="page">
-        <div class="coming-soon">Coming soon&hellip;</div>
+        <!--div class="coming-soon">Coming soon&hellip;</div-->
+        <div class="blogs cols">
+          <h2><span>Blogs that I write&hellip;</span></h2>
+          <div class="col1_3">
+            <img src="images/photoblog.jpg" />
+            <h3>Photography</h3>
+            <p>My new passion.<br>Instead of spending every second of
+            my life in front of monitor screen, I spend little bit of
+            my time looking at nature through the camera.</p>
+            <a href="http://thelookingglass.posterous.com">Go to my photo blog &raquo;</a>
+          </div>
+          <div class="col2_3">
+            <img src="images/technology.jpg" />
+            <h3>Technology</h3>
+            <p>I'm tech savvy enough to have opinion about it. Here's
+            the blog where I share things related to technology that
+            I find interesting, amusing or worth mentioning.</p><br/>
+            <a href="http://thetechblog.posterous.com">Go to my tech blog &raquo;</a>
+          </div>
+          <div class="col3_3">
+            <img src="images/reflexions.jpg" />
+            <h3>Reflexions</h3>
+            <p>I think my life's interesting enough. I share bits n
+            pieces of my life here, on my personal blog. I try to
+            maintain it as simple and tech free as possible.</p><br/>
+            <a href="http://prajwalit.com">Go to my reflexions blog &raquo;</a>
+          </div>          
+        </div>
+        <div class="cols social">
+          <h2><span>Contact me&hellip;</span></h2>
+          <ul class="cols">
+            <li class="twitter col1_3">@<a href="http://twitter.com/prajwalit">Prajwalit</a></li>
+            <li class="email col2_3"><a href="mailto:mail@prajwalit.com">mail@prajwalit.com</a></li>
+            <li class="linkedin col3_3"><a href="http://www.linkedin.com/in/prajwalit">LinkedIn profile</a></li>
+          </ul>
+        </div>
       </div>
       <footer>
         <div class="footnote">Copyright © 2010 Prajwalit.com &#149; All rights reserved</div>
