Fixed couple of mistakes

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
       </header>
       <div class="page">
         <!--div class="coming-soon">Coming soon&hellip;</div-->
+        
         <div class="blogs cols">
-          <h2><span>Blogs that I write&hellip;</span></h2>
+          <h2><span>Blogs I write&hellip;</span></h2>
           <div class="col1_3">
             <img src="images/photoblog.jpg" />
             <h3>Photography</h3>
             <p>My new passion.<br>Instead of spending every second of
-            my life in front of monitor screen, I spend little bit of
+            my life in front of computer screen, I spend little bit of
             my time looking at nature through the camera.</p>
             <a href="http://thelookingglass.posterous.com">Go to my photo blog &raquo;</a>
           </div>
