Added about me div.. but not content.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Prajwalit.com</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link href="stylesheets/screen.css?v=201009042000" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/screen.css?v=201009042100" media="screen, projection" rel="stylesheet" type="text/css" />
     
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" media="screen, projection" />
@@ -23,11 +23,18 @@
       </header>
       <div class="page">
         <!--div class="coming-soon">Coming soon&hellip;</div-->
+        <div class="aboutme">
+          <h2><span>About me&hellip;</span></h2>
+          <img class="about" src="images/praj.jpg" />
+          <p>
+            <br/><br/><br/><br/><br/><div style="text-align:center">- Write something here -</div>
+          </p>
+        </div>
         
         <div class="blogs cols">
           <h2><span>Blogs I write&hellip;</span></h2>
           <div class="col1_3">
-            <img src="images/photoblog.jpg" />
+            <img class="blogpics" src="images/photoblog.jpg" />
             <h3>Photography</h3>
             <p>My new passion.<br>Instead of spending every second of
             my life in front of computer screen, I spend little bit of
@@ -35,7 +42,7 @@
             <a href="http://thelookingglass.posterous.com">Go to my photo blog &raquo;</a>
           </div>
           <div class="col2_3">
-            <img src="images/technology.jpg" />
+            <img class="blogpics" src="images/technology.jpg" />
             <h3>Technology</h3>
             <p>I'm tech savvy enough to have opinion about it. Here's
             the blog where I share things related to technology that
@@ -43,7 +50,7 @@
             <a href="http://thetechblog.posterous.com">Go to my tech blog &raquo;</a>
           </div>
           <div class="col3_3">
-            <img src="images/reflexions.jpg" />
+            <img class="blogpics" src="images/reflexions.jpg" />
             <h3>Reflexions</h3>
             <p>I think my life's interesting enough. I share bits n
             pieces of my life here, on my personal blog. I try to
