Added a few nice colors :)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Prajwalit.com</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link href="stylesheets/screen.css?v=201009042100" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/screen.css?v=201009062300" media="screen, projection" rel="stylesheet" type="text/css" />
     
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" media="screen, projection" />
@@ -61,9 +61,14 @@
         <div class="cols social">
           <h2><span>Contact me&hellip;</span></h2>
           <ul class="cols">
-            <li class="twitter col1_3">@<a href="http://twitter.com/prajwalit">Prajwalit</a></li>
+            <li class="twitter col1_3"><a href="http://twitter.com/prajwalit">Twitter handle</a></li>
             <li class="email col2_3"><a href="mailto:mail@prajwalit.com">mail@prajwalit.com</a></li>
             <li class="linkedin col3_3"><a href="http://www.linkedin.com/in/prajwalit">LinkedIn profile</a></li>
+          </ul>
+          <ul class="cols">
+            <li class="github col1_3"><a href="http://github.com/prajwalit">Github Repository</a></li>
+            <li class="flickr col2_3"><a href="http://flickr.com/photos/prajwalit">Flickr Photostream</a></li>
+            <li class="facebook col3_3"><a href="http://facebook.com/prajwalit">Facebook profile</a></li>
           </ul>
         </div>
       </div>
