--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>
           <a href="http://prajwalit.com" title="Prajwalit.com">
-            <img src="images/logo.png" alt="prajwalit" />
+            <img src="images/logo.png?v=201009062300" alt="prajwalit" />
           </a>
         </h1>
       </header>
