Added Social Icons.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Prajwalit.com</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link href="stylesheets/screen.css?v=201009070040" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/screen.css?v=201009071235" media="screen, projection" rel="stylesheet" type="text/css" />
     
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" media="screen, projection" />
@@ -59,17 +59,20 @@
           </div>          
         </div>
         <div class="cols social">
-          <h2><span>Contact me&hellip;</span></h2>
-          <ul class="cols">
-            <li class="twitter col1_3"><a href="http://twitter.com/prajwalit">Twitter handle</a></li>
-            <li class="email col2_3"><a href="mailto:mail@prajwalit.com">mail@prajwalit.com</a></li>
-            <li class="linkedin col3_3"><a href="http://www.linkedin.com/in/prajwalit">LinkedIn profile</a></li>
-          </ul>
-          <ul class="cols">
-            <li class="github col1_3"><a href="http://github.com/prajwalit">Github Repository</a></li>
-            <li class="flickr col2_3"><a href="http://flickr.com/photos/prajwalit">Flickr Photostream</a></li>
-            <li class="facebook col3_3"><a href="http://facebook.com/prajwalit">Facebook profile</a></li>
-          </ul>
+          <div class="social-media-wrapper">
+            <ul class="social-icons horizontal">
+              <li><a class="twitter" href="http://twitter.com/Prajwalit" title="Twitter Profile">&nbsp;</a></li>
+              <li><a class="github" href="http://github.com/Prajwalit" title="Github Repository">&nbsp;</a></li>
+              <li><a class="email" href="mailto:mail@prajwalit.com" title="Email Address - mail@prajwalit.com">&nbsp;</a></li>
+              <li><a class="linkedin" href="http://www.linkedin.com/in/prajwalit" title="LinkedIn Profile">&nbsp;</a></li>
+              <li><a class="flickr" href="http://www.flickr.com/photos/prajwalit/" title="Flickr Photo Stream">&nbsp;</a></li>
+              <li><a class="facebook" href="http://www.facebook.com/prajwalit" title="Facebook Profile">&nbsp;</a></li>
+              <li><a class="posterous" href="http://posterous.com/people/4xlDBevCSMeJ" title="Posterous Profile">&nbsp;</a></li>
+              <li><a class="googlebuzz" href="http://posterous.com/people/4xlDBevCSMeJ" title="Google Buzz">&nbsp;</a></li>
+              <li><a class="picasa" href="http://picasaweb.google.com/prajwalit/Canon1000d" title="Picasa Photo Stream">&nbsp;</a></li>
+              <!-- Icons from - http://www.webdesignerdepot.com/2010/08/buddycons-vector-social-media-icons/ -->
+            </ul>
+          </div>
         </div>
       </div>
       <footer>
