Small change in title :)

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Prajwalit.com | </title>
+    <title>Prajwalit.com | résumé</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <link href="../stylesheets/screen.css?v=201009071300" media="screen, projection" rel="stylesheet" type="text/css" />
