Small css fixes.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Prajwalit.com</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link href="stylesheets/screen.css?v=201009101600" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/screen.css?v=201009131715" media="screen, projection" rel="stylesheet" type="text/css" />
     
     <!--[if IE]>
-    <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" media="screen, projection" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/ie.css?v=201009131715" media="screen, projection" />
     <script type="text/javascript" src="js/html5.js"></script>
     <![endif]-->
     
@@ -62,7 +62,7 @@
             <p>If you want to contact me professionally, you can mail me
               at <a href="mailto:mail@prajwalit.com">mail [at]
               prajwalit [dot] com</a> (Only if you're not from
-              Infosys). Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.
+              Infosys HR departmen)t. Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.
             </p>
           </div>
         </div>
@@ -72,9 +72,10 @@
           <div class="col1_3">
             <img class="blogpics" src="images/photoblog.jpg?v=201009062300" />
             <h3>Photography</h3>
-            <p>My new passion.<br>Instead of spending every second of
-            my life in front of computer screen, I spend little bit of
+            <p>My new passion.<br>Instead of spending every second in
+            front of the computer screen, I spend little bit of
             my time looking at nature through the camera.</p>
+            <br/>
             <a href="http://thelookingglass.posterous.com">Go to my photo blog &raquo;</a>
           </div>
           <div class="col2_3">
