added coming soon text in resume.

--- a/resume/index.html
+++ b/resume/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <div class="container">
-      <header>
-
+      <header style="color:#fff;text-align:center;">
+        Coming soon&hellip;
       </header>
       <div class="page">
       </div>
