Small typo fixed.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>If you want to contact me professionally, you can mail me
               at <a href="mailto:mail@prajwalit.com">mail [at]
               prajwalit [dot] com</a> (Only if you're not from
-              Infosys HR departmen)t. Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.
+              Infosys HR department). Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.
             </p>
           </div>
         </div>
@@ -76,7 +76,7 @@
             front of the computer screen, I spend little bit of
             my time looking at nature through the camera.</p>
             <br/>
-            <a href="http://thelookingglass.posterous.com">Go to my photo blog &raquo;</a>
+            <a href="http://photography.prajwalit.com">Go to my photo blog &raquo;</a>
           </div>
           <div class="col2_3">
             <img class="blogpics" src="images/technology.jpg?v=201009062300" />
@@ -84,7 +84,7 @@
             <p>I'm tech savvy enough to have an opinion about it. Here's
             the blog where I share things related to technology that
             I find interesting, amusing or worth mentioning.</p><br/>
-            <a href="http://thetechblog.posterous.com">Go to my tech blog &raquo;</a>
+            <a href="http://techblog.prajwalit.com">Go to my tech blog &raquo;</a>
           </div>
           <div class="col3_3">
             <img class="blogpics" src="images/reflexions.jpg?v=201009062300" />
@@ -92,7 +92,7 @@
             <p>I think my life's interesting enough. I share bits n
             pieces of my life here, on my personal blog. I try to
             maintain it as simple and tech free as possible.</p><br/>
-            <a href="http://prajwalit.com">Go to my reflexions blog &raquo;</a>
+            <a href="http://reflexions.prajwalit.com">Go to my reflexions blog &raquo;</a>
           </div>          
         </div>
         <div class="cols social">
