--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="blogs cols">
           <h2><span>Blogs I write&hellip;</span></h2>
           <div class="col1_3">
-            <img class="blogpics" src="images/photoblog.jpg?v=201009062300" />
+            <a href="http://photography.prajwalit.com" title="Go to photography.prajwalit.com"><img class="blogpics" src="images/photoblog.jpg?v=201009062300" /></a>
             <h3>Photography</h3>
             <p>My new passion.<br>Instead of spending every second in
             front of the computer screen, I spend little bit of
@@ -79,7 +79,7 @@
             <a href="http://photography.prajwalit.com">Go to my photo blog &raquo;</a>
           </div>
           <div class="col2_3">
-            <img class="blogpics" src="images/technology.jpg?v=201009062300" />
+            <a href="http://techblog.prajwalit.com" title="Go to techblog.prajwalit.com"><img class="blogpics" src="images/technology.jpg?v=201009062300" /></a>
             <h3>Technology</h3>
             <p>I'm tech savvy enough to have an opinion about it. Here's
             the blog where I share things related to technology that
@@ -87,7 +87,7 @@
             <a href="http://techblog.prajwalit.com">Go to my tech blog &raquo;</a>
           </div>
           <div class="col3_3">
-            <img class="blogpics" src="images/reflexions.jpg?v=201009062300" />
+            <a href="http://reflexions.prajwalit.com" title="Go to reflexions.prajwalit.com"><img class="blogpics" src="images/reflexions.jpg?v=201009062300" /></a>
             <h3>Reflexions</h3>
             <p>I think my life's interesting enough. I share bits n
             pieces of my life here, on my personal blog. I try to
@@ -115,6 +115,16 @@
       <footer>
         <div class="footnote">Copyright © 2010 Prajwalit.com &#149; All rights reserved</div>
       </footer>
+      <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-1214990-4']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+      </script>
     </div>
   </body>
 </html>
