--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               I'm Prajwalit. A software engineer from
               Pune. I did my engineering from Pune Institute of
               Computer Technology. Currently working as Front-End
-              Enginner in a startup called
+              Engineer in a startup called
               <a href="http://infinitelybeta.com">Infinitely Beta</a>. 
             </p>
             <p>
