Fixed google buzz link.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <li><a class="flickr" href="http://www.flickr.com/photos/prajwalit/" title="Flickr Photostream">&nbsp;</a></li>
               <li><a class="facebook" href="http://www.facebook.com/prajwalit" title="Facebook Profile">&nbsp;</a></li>
               <li><a class="posterous" href="http://posterous.com/people/4xlDBevCSMeJ" title="Posterous Profile">&nbsp;</a></li>
-              <li><a class="googlebuzz" href="http://posterous.com/people/4xlDBevCSMeJ" title="Google Buzz">&nbsp;</a></li>
+              <li><a class="googlebuzz" href="http://www.google.com/profiles/prajwalit#buzz" title="Google Buzz">&nbsp;</a></li>
               <li><a class="picasa" href="http://picasaweb.google.com/prajwalit/Canon1000d" title="Picasa Photostream">&nbsp;</a></li>
               <!-- Icons from - http://www.webdesignerdepot.com/2010/08/buddycons-vector-social-media-icons/ -->
             </ul>
