--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <p>
               I'm Prajwalit. A software engineer from
               Pune. I did my engineering from Pune Institute of
-              Computer Technology. Currently working as Front-End
-              Engineer in a startup called
+              Computer Technology. Currently working as 'Front-End
+              Engineer' for a startup called
               <a href="http://infinitelybeta.com">Infinitely Beta</a>. 
             </p>
             <p>
@@ -62,7 +62,7 @@
             <p>If you want to contact me professionally, you can mail me
               at <a href="mailto:mail@prajwalit.com">mail [at]
               prajwalit [dot] com</a> (Only if you're not from
-              Infosys HR department). Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.
+              Infosys' HR department). Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.
             </p>
           </div>
         </div>
