Changed email id.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <figure class="about"></figure>
           <div class="description">
             <p>
-              I'm Prajwalit. A software engineer from
+              I'm Prajwalit Bhopale. A software engineer from
               Pune. I did my engineering from Pune Institute of
               Computer Technology. Currently working as 'Front-End
               Engineer' for a startup called
@@ -45,8 +45,8 @@
             </p>
             <p>
               Apart from that, I'm an
-              amateur <a href="http://www.flickr.com/photos/prajwalit/"
-              title="Flickr Photostream">photographer</a>, a
+              amateur <a href="http://photography.prajwalit.com"
+              title="Photoblog">photographer</a>, a
               guitarist (well, sort of&hellip;), a movie/music buff
               and a book lover. 
             </p>
@@ -57,9 +57,9 @@
               in pune we can even hang out sometime.
             </p>
             <p>If you want to contact me professionally, you can mail me
-              at <a href="mailto:mail@prajwalit.com">mail [at]
+              at <a href="mailto:contact@prajwalit.com" title="contact@prajwalit.com">contact [at]
               prajwalit [dot] com</a> (Only if you're not from
-              Infosys' HR department). Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.
+              Infosys' HR department). <!--Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.-->
             </p>
           </div>
         </section>
@@ -103,7 +103,7 @@
             <ul class="social-icons horizontal">
               <li><a class="twitter" href="http://twitter.com/Prajwalit" title="Twitter Profile">&nbsp;</a></li>
               <li><a class="github" href="http://github.com/Prajwalit" title="Github Repository">&nbsp;</a></li>
-              <li><a class="email" href="mailto:mail@prajwalit.com" title="Email Address - mail@prajwalit.com">&nbsp;</a></li>
+              <li><a class="email" href="mailto:contact@prajwalit.com" title="Email Address - contact@prajwalit.com">&nbsp;</a></li>
               <li><a class="linkedin" href="http://www.linkedin.com/in/prajwalit" title="LinkedIn Profile">&nbsp;</a></li>
               <li><a class="flickr" href="http://www.flickr.com/photos/prajwalit/" title="Flickr Photostream">&nbsp;</a></li>
               <li><a class="facebook" href="http://www.facebook.com/prajwalit" title="Facebook Profile">&nbsp;</a></li>
@@ -118,16 +118,18 @@
       <footer>
         <div class="footnote">Copyright © 2010 Prajwalit.com &#149; All rights reserved</div>
       </footer>
-      <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-1214990-4']);
-        _gaq.push(['_trackPageview']);
-        (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-      </script>
     </div>
+    <script type="text/javascript" src="js/jqueryd.js"></script>
+    <script type="text/javascript" src="js/home.js"></script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-1214990-4']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
