Changed display pic. Now points to gravatar.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="page">
         <section class="aboutme">
           <h2><span>About me&hellip;</span></h2>
-          <figure class="about"></figure>
+          <figure class="about"><img src="http://www.gravatar.com/avatar/0e97956300ab23c8305935514dc64a38.png?s=250"></figure>
           <div class="description">
             <p>
               I'm Prajwalit Bhopale. A software engineer from
