That comments kinda sounds rude.. removing it..

--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
             </p>
             <p>If you want to contact me professionally, you can mail me
               at <a href="mailto:contact@prajwalit.com" title="contact@prajwalit.com">contact [at]
-              prajwalit [dot] com</a> (Only if you're not from
-              Infosys' HR department). <!--Have a look at my <a class="resume" href="/resume/">résumé</a> if you're interested.-->
+              prajwalit [dot] com</a>
             </p>
           </div>
         </section>
 
         <section class="blogs cols">
-          <h2><span>Blogs I write&hellip;</span></h2>
+          <h2><span>Blogs I (sometimes) write&hellip;</span></h2>
           <div class="col1_3">
             <figure>
               <a href="http://photography.prajwalit.com" title="Go to photography.prajwalit.com" class="blog photography"></a>
