--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link href="stylesheets/screen.css?v=201009142055" media="screen, projection" rel="stylesheet" type="text/css" />
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="stylesheets/ie.css?v=201009131715" media="screen, projection" />
-    <script type="text/javascript" src="js/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
     <link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.png" />
     <link rel="shortcut icon" href="images/favicon.png" />
 
