Small changes in text.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
 
         <section class="blogs cols">
-          <h2><span>Blogs I (sometimes) write&hellip;</span></h2>
+          <h2><span>Blogs I write&hellip; Sometimes&hellip;</span></h2>
           <div class="col1_3">
             <figure>
               <a href="http://photography.prajwalit.com" title="Go to photography.prajwalit.com" class="blog photography"></a>
@@ -82,7 +82,7 @@
             <h3>Technology</h3>
             <p>I'm tech savvy enough to have an opinion about it. Here's
             the blog where I share things related to technology that
-            I find interesting, amusing or worth mentioning.</p><br/>
+            I find interesting, amusing or worth mentioning.</p><br/><br/>
             <a href="http://techblog.prajwalit.com">Go to my tech blog &raquo;</a>
           </div>
           <div class="col3_3">
@@ -90,9 +90,7 @@
               <a href="http://reflexions.prajwalit.com" title="Go to reflexions.prajwalit.com" class="blog reflexions"></a>
             </figure>
             <h3>Reflexions</h3>
-            <p>I think my life's interesting enough. I share bits n
-            pieces of my life here, on my personal blog. I try to
-            maintain it as simple and tech free as possible.</p><br/>
+            <p>I share bits n pieces of my "interesting" life here, on my personal blog. May it be a nice quote that I stumbled upon, or some random rambling. I try to keep it as simple and tech free as possible.</p><br/>
             <a href="http://reflexions.prajwalit.com">Go to my reflexions blog &raquo;</a>
           </div>
         </section>
@@ -114,7 +112,7 @@
         </section>
       </div>
       <footer>
-        <div class="footnote">Copyright © 2010 Prajwalit.com &#149; All rights reserved</div>
+        <div class="footnote">Copyright © 2010-11 Prajwalit.com &#149; All rights reserved</div>
       </footer>
     </div>
     <script type="text/javascript">
