Changed copy a bit.

--- a/index.html
+++ b/index.html
@@ -29,26 +29,32 @@
             <p>
               I'm Prajwalit Bhopale. A software engineer from
               Pune. I did my engineering from Pune Institute of
-              Computer Technology. Currently working as 'Front-End
+              Computer Technology. Currently working as a 'Front-End
               Engineer' for a startup called
               <a href="http://infinitelybeta.com">Infinitely Beta</a>.
             </p>
             <p>
-              I'm a JavaScript programmer by profession. And I think
-              JavaScript is the future (Just wait n watch). I started
-              my career as JS Hacker
-              at <a href="http://cleartrip.com">Cleartrip.com</a>,
+              I started my career as JS Hacker at
+              <a href="http://cleartrip.com">Cleartrip.com</a>,
               Mumbai. Currently working
               on <a href="http://www.paisa.com/">Paisa.com</a>, a
               product of Infinitely Beta. And we think its pretty
-              cool&hellip; Check it out.
+              cool&hellip; Check it out. I've been using many different
+              JavaScript libraries and frameworks like YUI, Google Closure,
+              jQuery, Prototype. I'm interested in and facinated by philosophies
+              behind these libraries.
             </p>
             <p>
-              Apart from that, I'm an
-              amateur <a href="http://photography.prajwalit.com"
+              Along with JS, I work on HTML, CSS and even Clojure a little bit.
+              A wanna be designer. One day I'll have courage to install windows and
+              learn advance photoshopping. :)
+            </p>
+            <p>
+              Apart from all that, I'm a
+              novice <a href="http://photography.prajwalit.com"
               title="Photoblog">photographer</a>, a
               guitarist (well, sort of&hellip;), a movie/music buff
-              and a book lover.
+              and a books lover. Team Kindle!
             </p>
             <p>
               Just ping me anytime you want
@@ -56,7 +62,8 @@
               title="@Prajwalit">twitter</a>. If you're
               in pune we can even hang out sometime.
             </p>
-            <p>If you want to contact me professionally, you can mail me
+            <p>
+              If you want to contact me, you can mail me
               at <a href="mailto:contact@prajwalit.com" title="contact@prajwalit.com">contact [at]
               prajwalit [dot] com</a>
             </p>
