--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               product of Infinitely Beta. And we think its pretty
               cool&hellip; Check it out. I've been using many different
               JavaScript libraries and frameworks like YUI, Google Closure,
-              jQuery, Prototype. I'm interested in and facinated by philosophies
+              jQuery, Prototype. I'm interested in and fascinated by philosophies
               behind these libraries.
             </p>
             <p>
