--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Prajwalit.com</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link href="http://fonts.googleapis.com/css?family=Jura:500|Gruppo" rel="stylesheet" type="text/css" />
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu|Gruppo" rel="stylesheet" type="text/css" />
     <link href="stylesheets/screen.css?v=201112120121" media="screen, projection" rel="stylesheet" type="text/css" />
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="stylesheets/ie.css?v=201112120121" media="screen, projection" />
