--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Prajwalit.com</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link href="http://fonts.googleapis.com/css?family=Ubuntu|Gruppo" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/screen.css?v=201201111430" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu|Spicy+Rice" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/screen.css?v=201202030000" media="screen, projection" rel="stylesheet" type="text/css" />
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="stylesheets/ie.css?v=201201111430" media="screen, projection" />
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.png?v=2201201111430" />
-    <link rel="shortcut icon" href="images/favicon.png?v=201201111430" />
+    <link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.png?v=201202030000" />
+    <link rel="shortcut icon" href="images/favicon.png?v=201202030000" />
 
   </head>
   <body>
@@ -22,86 +22,13 @@
         </h1>
       </header>
       <div class="page">
-        <section class="aboutme">
-          <h2>I am&hellip;</h2><!-- Yoda reference - check -->
-          <div class="description">
-            <p>
-              Prajwalit Bhopale. A software engineer from
-              Pune. I did my engineering from Pune Institute of
-              Computer Technology. I'm currently working as a 'Front-End
-              Engineer' for a startup called
-              <a href="http://infinitelybeta.com">Infinitely Beta</a>.
-            </p>
-            <p>
-              I started my career as "JS Hacker" at
-              <a href="http://cleartrip.com">Cleartrip.com</a>,
-              Mumbai. And now we're working on a new product of Infinitely Beta.
-              We're planning to launch pretty soon. Watch this space.
-            </p>
-            <p>
-              I've been using many different
-              JavaScript libraries and frameworks like <a href="http://yuilibrary.com/">YUI</a>, <a href="http://code.google.com/closure/library/">Google Closure</a>,
-              <a href="http://jquery.com/">jQuery</a>, <a href="www.prototypejs.org/">Prototype</a>. I'm interested in and fascinated by philosophies
-              behind these libraries. <a href="https://github.com/prajwalit">Github</a> is my playground where I push things I work on to pass the time. <a href="https://github.com/prajwalit/prajwalit.github.com">Including this site</a>.</p>
-            <p>
-              Along with JS, I work on HTML, CSS and even Clojure a little bit.
-              A wanna-be designer. <del>One day I'll have courage to install windows and
-              learn advance photoshopping.</del> I'm thinking of shifting to Macintosh. :)
-            </p>
-            <p>
-              Apart from all that, I'm a
-              novice <a href="http://photography.prajwalit.com"
-              title="Photoblog">photographer</a>, a
-              guitarist (well, sort of&hellip;), a movie/music buff
-              and a <a href="http://goodreads.com/prajwalit">books lover</a>. Team Kindle!
-            </p>
-            <p>
-              Just ping me anytime you want
-              on <a href="http://twitter.com/Prajwalit" title="@Prajwalit">twitter</a>.
-              And if you're in pune we can even hang out sometime.
-            </p>
-            <p>
-              If you want to contact me, you can mail me
-              at <a href="mailto:contact@prajwalit.com" title="contact@prajwalit.com">contact [at]
-              prajwalit [dot] com</a>
-            </p>
-          </div>
-        </section>
-
-        <section class="blogs cols">
-          <h2>I write blogs about&hellip;</h2>
-          <div class="blog-wrapper">
-            <a href="http://techblog.prajwalit.com" title="Go to techblog.prajwalit.com" class="blog">
-              <img src="images/screen.jpg" width="200" />
-            </a>
-            <h3>Technology</h3>
-            <p>I'm tech savvy enough to have an opinion about it. Here's
-            the blog where I share things related to technology that
-            I find interesting, amusing, or worth mentioning.</p>
-            <a href="http://techblog.prajwalit.com">Go to my tech blog &raquo;</a>
-          </div>
-          <div class="blog-wrapper">
-            <a href="http://photography.prajwalit.com" title="Go to photography.prajwalit.com" class="blog">
-              <img src="images/ring.jpg" width="200" />
-            </a>
-            <h3>Photography</h3>
-            <p>My new passion.<br>Instead of spending every second in
-            front of the computer screen, I spend little bit of
-            my time looking at nature through the camera.</p>
-            <a href="http://photography.prajwalit.com">Go to my photo blog &raquo;</a>
-          </div>
-          <div class="blog-wrapper">
-            <a href="http://reflexions.prajwalit.com" title="Go to reflexions.prajwalit.com" class="blog">
-              <img src="images/tekdi.jpg" width="200" />
-            </a>
-            <h3>Reflexions</h3>
-            <p>
-              I share bits n pieces of my "interesting" life here, on my personal blog. May it be a nice quote that I stumbled upon,
-              or some random rambling. I try to keep it as simple and tech free as possible.
-            </p>
-            <a href="http://reflexions.prajwalit.com">Go to my reflexions blog &raquo;</a>
-          </div>
-        </section>
+        <h2>Javascripter @ Infinitely Beta</h2>
+        <div class="about-me">A Web geek.. A Kindle lover.. A Decemberists fan... <br/>
+          <a href="http://twitter.com/prajwalit" title="Twitter handle">@Prajwalit</a> &middot;
+          <a href="http://techblog.prajwalit.com" title="My tech blog">My Blog</a> &middot;
+          <a href="mailto:contact@prajwalit.com" title="contact [at] prajwalit [dot] com">Contact me</a> &middot;
+          <a href="http://infinitelyebeta.com" title="Infinitely Beta">Infinitely Beta</a>
+        </div>
         <section class="cols social">
           <div class="social-media-wrapper">
             <ul class="social-icons horizontal">
@@ -120,7 +47,7 @@
         </section>
       </div>
       <footer>
-        <div class="footnote">Copyright © 2010-11 Prajwalit.com &#149; All rights reserved</div>
+        <div class="footnote">Copyright © 2010-12 Prajwalit.com &#149; All rights reserved</div>
       </footer>
     </div>
     <script type="text/javascript">
