Fixed broken link.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="http://twitter.com/prajwalit" title="Twitter handle">@Prajwalit</a> &middot;
           <a href="http://techblog.prajwalit.com" title="My tech blog">My Blog</a> &middot;
           <a href="mailto:contact@prajwalit.com" title="contact [at] prajwalit [dot] com">Contact me</a> &middot;
-          <a href="http://infinitelyebeta.com" title="Infinitely Beta">Infinitely Beta</a>
+          <a href="http://infinitelybeta.com" title="Infinitely Beta">Infinitely Beta</a>
         </div>
         <section class="cols social">
           <div class="social-media-wrapper">
