--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </h1>
       </header>
       <div class="page">
-        <h2>Javascripter @ Infinitely Beta</h2>
-        <div class="about-me">A Web geek.. A Kindle lover.. A Decemberists fan... <br/>
+        <h2>Javascripter @ Helpshift</h2>
+        <div class="about-me">A Web Geek.. A Kindle Lover.. A Tolkien Fan... <br/>
           <a href="http://twitter.com/prajwalit" title="Twitter handle">@Prajwalit</a> &middot;
           <a href="http://techblog.prajwalit.com" title="My tech blog">My Blog</a> &middot;
           <a href="mailto:contact@prajwalit.com" title="contact [at] prajwalit [dot] com">Contact me</a> &middot;
-          <a href="http://infinitelybeta.com" title="Infinitely Beta">Infinitely Beta</a>
+          <a href="http://helpshift.com" title="Helpshift.com">Helpshift.com</a>
         </div>
         <section class="cols social">
           <div class="social-media-wrapper">
@@ -38,16 +38,14 @@
               <li><a class="linkedin" href="http://www.linkedin.com/in/prajwalit" title="LinkedIn Profile">&nbsp;</a></li>
               <li><a class="flickr" href="http://www.flickr.com/photos/prajwalit/" title="Flickr Photostream">&nbsp;</a></li>
               <li><a class="facebook" href="http://www.facebook.com/prajwalit" title="Facebook Profile">&nbsp;</a></li>
-              <li><a class="posterous" href="http://posterous.com/people/4xlDBevCSMeJ" title="Posterous Profile">&nbsp;</a></li>
-              <li><a class="googlebuzz" href="http://www.google.com/profiles/prajwalit#buzz" title="Google Buzz">&nbsp;</a></li>
-              <li><a class="picasa" href="http://picasaweb.google.com/prajwalit/Canon1000d" title="Picasa Photostream">&nbsp;</a></li>
+              <li><a class="googlebuzz" href="https://plus.google.com/112887322867451983958/posts" title="Google Plus">&nbsp;</a></li>
               <!-- Icons from - http://www.webdesignerdepot.com/2010/08/buddycons-vector-social-media-icons/ -->
             </ul>
           </div>
         </section>
       </div>
       <footer>
-        <div class="footnote">Copyright © 2010-12 Prajwalit.com &#149; All rights reserved</div>
+        <div class="footnote">Copyright © 2010-13 Prajwalit.com &#149; All rights reserved</div>
       </footer>
     </div>
     <script type="text/javascript">
