--- a/index.html
+++ b/index.html
@@ -4,57 +4,8 @@
     <title>Prajwalit.com</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link href="http://fonts.googleapis.com/css?family=Ubuntu|Spicy+Rice" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/screen.css?v=201202031130" media="screen, projection" rel="stylesheet" type="text/css" />
-    <!--[if IE]>
-    <link rel="stylesheet" type="text/css" href="stylesheets/ie.css?v=201201111430" media="screen, projection" />
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.png?v=201202031130" />
-    <link rel="shortcut icon" href="images/favicon.png?v=201202031130" />
-
   </head>
   <body>
-    <div class="container">
-      <header>
-        <h1>
-          <a href="http://prajwalit.com" title="Prajwalit.com">Prajwalit</a>
-        </h1>
-      </header>
-      <div class="page">
-        <h2>Javascripter @ Helpshift</h2>
-        <div class="about-me">A Web Geek.. A Kindle Lover.. A Tolkien Fan... <br/>
-          <a href="http://twitter.com/prajwalit" title="Twitter handle">@Prajwalit</a> &middot;
-          <a href="mailto:contact@prajwalit.com" title="contact [at] prajwalit [dot] com">Contact me</a> &middot;
-          <a href="http://helpshift.com" title="Helpshift.com">Helpshift.com</a>
-        </div>
-        <section class="cols social">
-          <div class="social-media-wrapper">
-            <ul class="social-icons horizontal">
-              <li><a class="twitter" href="http://twitter.com/Prajwalit" title="Twitter Profile">&nbsp;</a></li>
-              <li><a class="github" href="http://github.com/Prajwalit" title="Github Repository">&nbsp;</a></li>
-              <li><a class="email" href="mailto:contact@prajwalit.com" title="Email Address - contact@prajwalit.com">&nbsp;</a></li>
-              <li><a class="linkedin" href="http://www.linkedin.com/in/prajwalit" title="LinkedIn Profile">&nbsp;</a></li>
-              <li><a class="flickr" href="http://www.flickr.com/photos/prajwalit/" title="Flickr Photostream">&nbsp;</a></li>
-              <li><a class="facebook" href="http://www.facebook.com/prajwalit" title="Facebook Profile">&nbsp;</a></li>
-              <!-- Icons from - http://www.webdesignerdepot.com/2010/08/buddycons-vector-social-media-icons/ -->
-            </ul>
-          </div>
-        </section>
-      </div>
-      <footer>
-        <div class="footnote">Copyright © 2010-15 Prajwalit.com &#149; All rights reserved</div>
-      </footer>
-    </div>
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-1214990-4']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
+    Prajwalit
   </body>
 </html>
