--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Prajwalit.com</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Prajwalit</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    Prajwalit
+    <h1>Hi, this is</h1>
+    <h1>Prajwalit</h1>
+	<script src="index.js"></script>
   </body>
 </html>
