--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Prajwalit</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/home.css">
   </head>
   <body>
     <h1>Hi, this is</h1>
     <h1>Prajwalit</h1>
-	<script src="index.js"></script>
+	<script src="js/home.js"></script>
   </body>
 </html>
