Create basic frame of the page plus first screen

--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Prajwalit</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/home.css">
   </head>
   <body>
-    <h1>Hi, this is</h1>
-    <h1>Prajwalit</h1>
+    <article class="slide-1">
+      <div class="name-box">
+        <h1>Hi, this is</h1>
+        <h1 class="accent">Prajwalit</h1>
+      </div>
+      <section class="quote">
+        <div class="quote-content">
+          <h4 class="role">Founder, Salher</h4>
+          “Shaping successful engineering leaders today to navigate the challenges of tomorrow.”
+        </div> 
+      </section>
+    </article>
+
+    <article class="slide-2">
+
+    </article>
+
+    <article class="slide-3">
+
+    </article>
+
+    <footer>
+      
+    </footer>
+    
 	<script src="js/home.js"></script>
   </body>
 </html>
